@@ -5,12 +5,15 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
+import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.URLEncoder;
 import java.net.UnknownHostException;
+import java.nio.charset.Charset;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Calendar;
@@ -44,6 +47,7 @@ import java.util.zip.GZIPInputStream;
 
 import javax.servlet.ServletContext;
 
+import org.apache.http.client.ClientProtocolException;
 import org.osgi.framework.BundleContext;
 import org.osgi.util.tracker.ServiceTracker;
 
@@ -69,8 +73,18 @@ import com.sap.sailing.domain.base.Regatta;
 import com.sap.sailing.domain.base.Series;
 import com.sap.sailing.domain.base.Sideline;
 import com.sap.sailing.domain.base.Waypoint;
+import com.sap.sailing.domain.base.configuration.DeviceConfiguration;
+import com.sap.sailing.domain.base.configuration.DeviceConfigurationMatcher;
+import com.sap.sailing.domain.base.configuration.RegattaConfiguration;
+import com.sap.sailing.domain.base.configuration.impl.DeviceConfigurationImpl;
+import com.sap.sailing.domain.base.configuration.impl.DeviceConfigurationMatcherMulti;
+import com.sap.sailing.domain.base.configuration.impl.DeviceConfigurationMatcherSingle;
+import com.sap.sailing.domain.base.configuration.impl.ESSConfigurationImpl;
+import com.sap.sailing.domain.base.configuration.impl.GateStartConfigurationImpl;
+import com.sap.sailing.domain.base.configuration.impl.RRS26ConfigurationImpl;
+import com.sap.sailing.domain.base.configuration.impl.RacingProcedureConfigurationImpl;
+import com.sap.sailing.domain.base.configuration.impl.RegattaConfigurationImpl;
 import com.sap.sailing.domain.base.impl.FleetImpl;
-import com.sap.sailing.domain.base.impl.KnotSpeedImpl;
 import com.sap.sailing.domain.base.impl.RegattaImpl;
 import com.sap.sailing.domain.base.impl.SeriesImpl;
 import com.sap.sailing.domain.common.Bearing;
@@ -107,6 +121,7 @@ import com.sap.sailing.domain.common.Tack;
 import com.sap.sailing.domain.common.TimePoint;
 import com.sap.sailing.domain.common.WindSource;
 import com.sap.sailing.domain.common.WindSourceType;
+import com.sap.sailing.domain.common.configuration.DeviceConfigurationMatcherType;
 import com.sap.sailing.domain.common.dto.BoatClassDTO;
 import com.sap.sailing.domain.common.dto.CompetitorDTO;
 import com.sap.sailing.domain.common.dto.FleetDTO;
@@ -125,6 +140,7 @@ import com.sap.sailing.domain.common.dto.TrackedRaceDTO;
 import com.sap.sailing.domain.common.impl.DegreeBearingImpl;
 import com.sap.sailing.domain.common.impl.DegreePosition;
 import com.sap.sailing.domain.common.impl.KilometersPerHourSpeedImpl;
+import com.sap.sailing.domain.common.impl.KnotSpeedImpl;
 import com.sap.sailing.domain.common.impl.KnotSpeedWithBearingImpl;
 import com.sap.sailing.domain.common.impl.MeterDistance;
 import com.sap.sailing.domain.common.impl.MillisecondsTimePoint;
@@ -133,9 +149,12 @@ import com.sap.sailing.domain.common.impl.Util;
 import com.sap.sailing.domain.common.impl.Util.Pair;
 import com.sap.sailing.domain.common.impl.Util.Triple;
 import com.sap.sailing.domain.common.impl.WindSourceImpl;
+import com.sap.sailing.domain.common.racelog.FlagPole;
 import com.sap.sailing.domain.common.racelog.Flags;
 import com.sap.sailing.domain.common.racelog.RaceLogRaceStatus;
-import com.sap.sailing.domain.common.racelog.StartProcedureType;
+import com.sap.sailing.domain.igtimiadapter.Account;
+import com.sap.sailing.domain.igtimiadapter.IgtimiConnection;
+import com.sap.sailing.domain.igtimiadapter.IgtimiConnectionFactory;
 import com.sap.sailing.domain.leaderboard.FlexibleLeaderboard;
 import com.sap.sailing.domain.leaderboard.Leaderboard;
 import com.sap.sailing.domain.leaderboard.LeaderboardGroup;
@@ -151,17 +170,11 @@ import com.sap.sailing.domain.racelog.RaceLog;
 import com.sap.sailing.domain.racelog.RaceLogFlagEvent;
 import com.sap.sailing.domain.racelog.RaceStateOfSameDayHelper;
 import com.sap.sailing.domain.racelog.analyzing.impl.AbortingFlagFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.FinishedTimeFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.GateLineOpeningTimeFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.LastFlagsFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.LastPublishedCourseDesignFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.LastWindFixFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.PathfinderFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.ProtestStartTimeFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.RRS26StartModeFlagFinder;
-import com.sap.sailing.domain.racelog.analyzing.impl.RaceStatusAnalyzer;
-import com.sap.sailing.domain.racelog.analyzing.impl.StartProcedureTypeAnalyzer;
-import com.sap.sailing.domain.racelog.analyzing.impl.StartTimeFinder;
+import com.sap.sailing.domain.racelog.state.ReadonlyRaceState;
+import com.sap.sailing.domain.racelog.state.impl.ReadonlyRaceStateImpl;
+import com.sap.sailing.domain.racelog.state.racingprocedure.FlagPoleState;
+import com.sap.sailing.domain.racelog.state.racingprocedure.gate.ReadonlyGateStartRacingProcedure;
+import com.sap.sailing.domain.racelog.state.racingprocedure.rrs26.ReadonlyRRS26RacingProcedure;
 import com.sap.sailing.domain.swisstimingadapter.SwissTimingAdapter;
 import com.sap.sailing.domain.swisstimingadapter.SwissTimingAdapterFactory;
 import com.sap.sailing.domain.swisstimingadapter.SwissTimingArchiveConfiguration;
@@ -172,6 +185,7 @@ import com.sap.sailing.domain.swisstimingreplayadapter.SwissTimingReplayRace;
 import com.sap.sailing.domain.swisstimingreplayadapter.SwissTimingReplayService;
 import com.sap.sailing.domain.swisstimingreplayadapter.SwissTimingReplayServiceFactory;
 import com.sap.sailing.domain.tracking.DynamicTrackedRace;
+import com.sap.sailing.domain.tracking.DynamicTrackedRegatta;
 import com.sap.sailing.domain.tracking.GPSFix;
 import com.sap.sailing.domain.tracking.GPSFixMoving;
 import com.sap.sailing.domain.tracking.GPSFixTrack;
@@ -202,6 +216,9 @@ import com.sap.sailing.gwt.ui.shared.CompetitorsRaceDataDTO;
 import com.sap.sailing.gwt.ui.shared.ControlPointDTO;
 import com.sap.sailing.gwt.ui.shared.CourseAreaDTO;
 import com.sap.sailing.gwt.ui.shared.CoursePositionsDTO;
+import com.sap.sailing.gwt.ui.shared.DeviceConfigurationDTO;
+import com.sap.sailing.gwt.ui.shared.DeviceConfigurationDTO.RegattaConfigurationDTO;
+import com.sap.sailing.gwt.ui.shared.DeviceConfigurationMatcherDTO;
 import com.sap.sailing.gwt.ui.shared.EventDTO;
 import com.sap.sailing.gwt.ui.shared.GPSFixDTO;
 import com.sap.sailing.gwt.ui.shared.GateDTO;
@@ -219,6 +236,7 @@ import com.sap.sailing.gwt.ui.shared.RaceInfoDTO;
 import com.sap.sailing.gwt.ui.shared.RaceInfoDTO.GateStartInfoDTO;
 import com.sap.sailing.gwt.ui.shared.RaceInfoDTO.RRS26InfoDTO;
 import com.sap.sailing.gwt.ui.shared.RaceInfoDTO.RaceInfoExtensionDTO;
+import com.sap.sailing.gwt.ui.shared.RaceLogSetStartTimeDTO;
 import com.sap.sailing.gwt.ui.shared.RaceTimesInfoDTO;
 import com.sap.sailing.gwt.ui.shared.RaceWithCompetitorsDTO;
 import com.sap.sailing.gwt.ui.shared.RegattaDTO;
@@ -317,6 +335,12 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
     private final MongoObjectFactory mongoObjectFactory;
 
     private final SwissTimingAdapterPersistence swissTimingAdapterPersistence;
+    
+    private final ServiceTracker<SwissTimingAdapterFactory, SwissTimingAdapterFactory> swissTimingAdapterTracker;
+
+    private final ServiceTracker<TracTracAdapterFactory, TracTracAdapterFactory> tractracAdapterTracker;
+
+    private final ServiceTracker<IgtimiConnectionFactory, IgtimiConnectionFactory> igtimiAdapterTracker;
 
     private final com.sap.sailing.domain.tractracadapter.persistence.MongoObjectFactory tractracMongoObjectFactory;
 
@@ -329,9 +353,8 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
     private final com.sap.sailing.domain.common.CountryCodeFactory countryCodeFactory;
 
     private final Executor executor;
-
+    
     private final com.sap.sailing.domain.base.DomainFactory baseDomainFactory;
-
     
     private static final int LEADERBOARD_BY_NAME_RESULTS_CACHE_BY_ID_SIZE = 100;
     
@@ -347,25 +370,28 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
      * {@link #LEADERBOARD_DIFFERENCE_CACHE_SIZE}.
      */
     private final LinkedHashMap<Pair<String, String>, IncrementalLeaderboardDTO> leaderboardDifferenceCacheByIdPair;
-    private final TracTracAdapter tracTracAdapter;
-
-    private final SwissTimingAdapter swissTimingAdapter;
 
     private final SwissTimingReplayService swissTimingReplayService;
 
+    private final BundleContext context;
+
     public SailingServiceImpl() {
-        BundleContext context = Activator.getDefault();
+        context = Activator.getDefault();
         racingEventServiceTracker = createAndOpenRacingEventServiceTracker(context);
         replicationServiceTracker = createAndOpenReplicationServiceTracker(context);
+        swissTimingAdapterTracker = createAndOpenSwissTimingAdapterTracker(context);
+        tractracAdapterTracker = createAndOpenTracTracAdapterTracker(context);
+        igtimiAdapterTracker = createAndOpenIgtimiTracker(context);
         baseDomainFactory = getService().getBaseDomainFactory();
         mongoObjectFactory = getService().getMongoObjectFactory();
         domainObjectFactory = getService().getDomainObjectFactory();
-        tracTracAdapter = createAndOpenTracTracAdapterTracker(context).getService().getOrCreateTracTracAdapter(baseDomainFactory);
+        // TODO what about passing on the mongo/domain object factory to obtain an according SwissTimingAdapterPersistence instance similar to how the tractracDomainObjectFactory etc. are created below?
         swissTimingAdapterPersistence = SwissTimingAdapterPersistence.INSTANCE;
-        swissTimingAdapter = createAndOpenSwissTimingAdapterTracker(context).getService().getOrCreateSwissTimingAdapter(baseDomainFactory, swissTimingAdapterPersistence);
-        swissTimingReplayService = createAndOpenSwissTimingReplayServiceTracker(context).getService().createSwissTimingReplayService(swissTimingAdapter.getSwissTimingDomainFactory());
+        swissTimingReplayService = getSwissTimingReplayService(context);
         scoreCorrectionProviderServiceTracker = createAndOpenScoreCorrectionProviderServiceTracker(context);
-        tractracDomainObjectFactory = com.sap.sailing.domain.tractracadapter.persistence.PersistenceFactory.INSTANCE.createDomainObjectFactory(mongoObjectFactory.getDatabase(), tracTracAdapter.getTracTracDomainFactory());
+        tractracDomainObjectFactory = com.sap.sailing.domain.tractracadapter.persistence.PersistenceFactory.INSTANCE
+                .createDomainObjectFactory(mongoObjectFactory.getDatabase(), getTracTracAdapter()
+                        .getTracTracDomainFactory());
         tractracMongoObjectFactory = com.sap.sailing.domain.tractracadapter.persistence.MongoObjectFactory.INSTANCE;
         swissTimingFactory = SwissTimingFactory.INSTANCE;
         countryCodeFactory = com.sap.sailing.domain.common.CountryCodeFactory.INSTANCE;
@@ -393,9 +419,28 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
                 /* workQueue */ new LinkedBlockingQueue<Runnable>());
     }
 
+    protected SwissTimingReplayService getSwissTimingReplayService(BundleContext context) {
+        return createAndOpenSwissTimingReplayServiceTracker(context).getService().createSwissTimingReplayService(getSwissTimingAdapter().getSwissTimingDomainFactory());
+    }
+
+    protected SwissTimingAdapter getSwissTimingAdapter() {
+        return swissTimingAdapterTracker.getService().getOrCreateSwissTimingAdapter(baseDomainFactory, swissTimingAdapterPersistence);
+    }
+
+    protected TracTracAdapter getTracTracAdapter() {
+        return tractracAdapterTracker.getService().getOrCreateTracTracAdapter(baseDomainFactory);
+    }
+
     protected ServiceTracker<TracTracAdapterFactory, TracTracAdapterFactory> createAndOpenTracTracAdapterTracker(BundleContext context) {
         ServiceTracker<TracTracAdapterFactory, TracTracAdapterFactory> result = new ServiceTracker<TracTracAdapterFactory, TracTracAdapterFactory>(
                 context, TracTracAdapterFactory.class.getName(), null);
+        result.open();
+        return result;
+    }
+
+    protected ServiceTracker<IgtimiConnectionFactory, IgtimiConnectionFactory> createAndOpenIgtimiTracker(BundleContext context) {
+        ServiceTracker<IgtimiConnectionFactory, IgtimiConnectionFactory> result = new ServiceTracker<IgtimiConnectionFactory, IgtimiConnectionFactory>(
+                context, IgtimiConnectionFactory.class.getName(), null);
         result.open();
         return result;
     }
@@ -623,9 +668,10 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
             regattaDTO.boatClass = new BoatClassDTO(boatClass.getName(), boatClass.getHullLength().getMeters());
         }
         if (regatta.getDefaultCourseArea() != null) {
-            regattaDTO.defaultCourseAreaIdAsString = regatta.getDefaultCourseArea().getId().toString();
+            regattaDTO.defaultCourseAreaUuidAsString = regatta.getDefaultCourseArea().getId().toString();
             regattaDTO.defaultCourseAreaName = regatta.getDefaultCourseArea().getName();
         }
+        regattaDTO.configuration = convertToRegattaConfigurationDTO(regatta.getRegattaConfiguration());
         return regattaDTO;
     }
 
@@ -662,32 +708,33 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         RaceLog raceLog = raceColumn.getRaceLog(fleet);
         if (raceLog != null) {
             
-            StartTimeFinder startTimeFinder = new StartTimeFinder(raceLog);
-            TimePoint startTime = startTimeFinder.analyze();
+            ReadonlyRaceState state = ReadonlyRaceStateImpl.create(raceLog);
+            
+            TimePoint startTime = state.getStartTime();
             if (startTime != null) {
                 raceInfoDTO.startTime = startTime.asDate();
             }
 
-            RaceStatusAnalyzer raceStatusAnalyzer = new RaceStatusAnalyzer(raceLog);
-            raceInfoDTO.lastStatus = raceStatusAnalyzer.analyze();
+            raceInfoDTO.lastStatus = state.getStatus();
             
             if (raceLog.getLastRawFix() != null) {
-                raceInfoDTO.lastUpdateTime = raceLog.getLastRawFix().getTimePoint().asDate();
+                raceInfoDTO.lastUpdateTime = raceLog.getLastRawFix().getCreatedAt().asDate();
             }
             
-            FinishedTimeFinder finishedTimeFinder = new FinishedTimeFinder(raceLog);
-            TimePoint finishedTime = finishedTimeFinder.analyze();
+            TimePoint finishedTime = state.getFinishedTime();
             if (finishedTime != null) {
                 raceInfoDTO.finishedTime = finishedTime.asDate();
             }
 
-            LastFlagsFinder lastFlagFinder = new LastFlagsFinder(raceLog);
-
-            RaceLogFlagEvent lastFlagEvent = LastFlagsFinder.getMostRecent(lastFlagFinder.analyze());
-            if (lastFlagEvent != null) {
-                raceInfoDTO.lastUpperFlag = lastFlagEvent.getUpperFlag();
-                raceInfoDTO.lastLowerFlag = lastFlagEvent.getLowerFlag();
-                raceInfoDTO.isLastFlagDisplayed = lastFlagEvent.isDisplayed();
+            if (startTime != null) {
+                FlagPoleState activeFlagState = state.getRacingProcedure().getActiveFlags(startTime, MillisecondsTimePoint.now());
+                List<FlagPole> activeFlags = activeFlagState.getCurrentState();
+                // TODO: adapt the LastFlagFinder#getMostRecent method!
+                if (!activeFlags.isEmpty()) {
+                    raceInfoDTO.lastUpperFlag = activeFlags.get(0).getUpperFlag();
+                    raceInfoDTO.lastLowerFlag = activeFlags.get(0).getLowerFlag();
+                    raceInfoDTO.isLastFlagDisplayed = activeFlags.get(0).isDisplayed();
+                }
             }
             
             AbortingFlagFinder abortingFlagFinder = new AbortingFlagFinder(raceLog);
@@ -703,17 +750,14 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
                 }
             }
             
-            LastPublishedCourseDesignFinder courseDesignFinder = new LastPublishedCourseDesignFinder(raceLog);
-            CourseBase lastCourse = courseDesignFinder.analyze();
-            raceInfoDTO.lastCourseDesign = convertCourseDesignToRaceCourseDTO(lastCourse);
+            CourseBase lastCourse = state.getCourseDesign();
             if (lastCourse != null) {
+                raceInfoDTO.lastCourseDesign = convertCourseDesignToRaceCourseDTO(lastCourse);
                 raceInfoDTO.lastCourseName = lastCourse.getName();
             }
             
             if (raceInfoDTO.lastStatus.equals(RaceLogRaceStatus.FINISHED)) {
-                ProtestStartTimeFinder protestStartTimeFinder = new ProtestStartTimeFinder(raceLog);
-                
-                TimePoint protestStartTime = protestStartTimeFinder.analyze();
+                TimePoint protestStartTime = state.getProtestTime();
                 if (protestStartTime != null) {
                     long protestDuration = 90 * 60 * 1000; // 90 min protest duration
                     raceInfoDTO.protestFinishTime = protestStartTime.plus(protestDuration).asDate();
@@ -723,13 +767,12 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
                 }
             }
             
-            LastWindFixFinder windFinder = new LastWindFixFinder(raceLog);
-            Wind wind = windFinder.analyze();
+            Wind wind = state.getWindFix();
             if (wind != null) {
                 raceInfoDTO.lastWind = createWindDTOFromAlreadyAveraged(wind, MillisecondsTimePoint.now());
             }
 
-            fillStartProcedureSpecifics(raceInfoDTO, raceLog);
+            fillStartProcedureSpecifics(raceInfoDTO, state);
         }
         raceInfoDTO.seriesName = seriesName;
         raceInfoDTO.raceName = raceColumn.getName();
@@ -741,27 +784,22 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         return raceInfoDTO;
     }    
     
-    private void fillStartProcedureSpecifics(RaceInfoDTO raceInfoDTO, RaceLog raceLog) {
-        StartProcedureTypeAnalyzer procedureAnalyzer = new StartProcedureTypeAnalyzer(raceLog);
-        StartProcedureType type = procedureAnalyzer.analyze();
-        if (type != null) {
-            raceInfoDTO.startProcedure = type;
-            RaceInfoExtensionDTO info = null;
-            switch (type) {
-            case RRS26:
-                RRS26StartModeFlagFinder startModeFinder = new RRS26StartModeFlagFinder(procedureAnalyzer, raceLog);
-                info = new RRS26InfoDTO(startModeFinder.analyze());
-                break;
-            case GateStart:
-                PathfinderFinder pathfinderFinder = new PathfinderFinder(raceLog);
-                GateLineOpeningTimeFinder gateLineOpeningTimeFinder = new GateLineOpeningTimeFinder(raceLog);
-                info = new GateStartInfoDTO(pathfinderFinder.analyze(), gateLineOpeningTimeFinder.analyze());
-                break;
-            default:
-                break;
-            }
-            raceInfoDTO.startProcedureDTO = info;
+    private void fillStartProcedureSpecifics(RaceInfoDTO raceInfoDTO, ReadonlyRaceState state) {
+        RaceInfoExtensionDTO info = null;
+        raceInfoDTO.startProcedure = state.getRacingProcedure().getType();
+        switch (raceInfoDTO.startProcedure) {
+        case GateStart:
+            ReadonlyGateStartRacingProcedure gateStart = state.getTypedReadonlyRacingProcedure();
+            info = new GateStartInfoDTO(gateStart.getPathfinder(), gateStart.getGateLaunchStopTime());
+            break;
+        case RRS26:
+            ReadonlyRRS26RacingProcedure rrs26 = state.getTypedReadonlyRacingProcedure();
+            info = new RRS26InfoDTO(rrs26.getStartModeFlag());
+        case UNKNOWN:
+        default:
+            break;
         }
+        raceInfoDTO.startProcedureDTO = info;
     }
 
     private RaceCourseDTO convertCourseDesignToRaceCourseDTO(CourseBase lastCourseDesign) {
@@ -878,14 +916,6 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         }
     }
 
-    private TracTracAdapter getTracTracAdapter() {
-        return tracTracAdapter;
-    }
-    
-    private SwissTimingAdapter getSwissTimingAdapter() {
-        return swissTimingAdapter;
-    }
-    
     private SwissTimingReplayService getSwissTimingReplayService() {
         return swissTimingReplayService;
     }
@@ -904,7 +934,7 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
 
     @Override
     public void storeTracTracConfiguration(String name, String jsonURL, String liveDataURI, String storedDataURI, String courseDesignUpdateURI, String tracTracUsername, String tracTracPassword) throws Exception {
-        tractracMongoObjectFactory.storeTracTracConfiguration(tracTracAdapter.createTracTracConfiguration(name, jsonURL, liveDataURI, storedDataURI, 
+        tractracMongoObjectFactory.storeTracTracConfiguration(getTracTracAdapter().createTracTracConfiguration(name, jsonURL, liveDataURI, storedDataURI, 
                 courseDesignUpdateURI, tracTracUsername, tracTracPassword));
     }
 
@@ -1181,7 +1211,7 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         if (trackedRace != null) {
             TimePoint fromTimePoint = from == null ? trackedRace.getStartOfTracking() : new MillisecondsTimePoint(from);
             TimePoint toTimePoint = to == null ? trackedRace.getEndOfRace() : new MillisecondsTimePoint(to);
-            if(fromTimePoint != null && toTimePoint != null) {
+            if (fromTimePoint != null && toTimePoint != null) {
                 int numberOfFixes = (int) ((toTimePoint.asMillis() - fromTimePoint.asMillis())/resolutionInMilliseconds);
                 result = getAveragedWindInfo(fromTimePoint, resolutionInMilliseconds, numberOfFixes, windSourceTypeNames, trackedRace);
             }
@@ -2116,7 +2146,7 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         List<SwissTimingRaceRecordDTO> result = new ArrayList<SwissTimingRaceRecordDTO>();
         for (com.sap.sailing.domain.swisstimingadapter.RaceRecord rr : getSwissTimingAdapter().getSwissTimingRaceRecords(hostname, port, canSendRequests)) {
             SwissTimingRaceRecordDTO swissTimingRaceRecordDTO = new SwissTimingRaceRecordDTO(rr.getRaceID(), rr.getDescription(), rr.getStartTime());
-            BoatClass boatClass = swissTimingAdapter.getSwissTimingDomainFactory().getRaceTypeFromRaceID(rr.getRaceID()).getBoatClass();
+            BoatClass boatClass = getSwissTimingAdapter().getSwissTimingDomainFactory().getRaceTypeFromRaceID(rr.getRaceID()).getBoatClass();
             swissTimingRaceRecordDTO.boatClass = boatClass != null ? boatClass.getName() : null;
             swissTimingRaceRecordDTO.discipline = rr.getRaceID().length() >= 3 ? rr.getRaceID().substring(2, 3) : null;
             swissTimingRaceRecordDTO.hasCourse = rr.hasCourse();
@@ -2177,32 +2207,34 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         logger.info("replaySwissTimingRace for regatta "+regattaIdentifier+" for races "+replayRaceDTOs);
         Regatta regatta;
         for (SwissTimingReplayRaceDTO replayRaceDTO : replayRaceDTOs) {
-            if (regattaIdentifier == null) {
-                String boatClass = replayRaceDTO.boat_class;
-                for (String genderIndicator : new String[] { "Man", "Woman", "Men", "Women", "M", "W" }) {
-                    Pattern p = Pattern.compile("(( - )|-| )" + genderIndicator + "$");
-                    Matcher m = p.matcher(boatClass.trim());
-                    if (m.find()) {
-                        boatClass = boatClass.trim().substring(0, m.start(1));
-                        break;
+            try {
+                if (regattaIdentifier == null) {
+                    String boatClass = replayRaceDTO.boat_class;
+                    for (String genderIndicator : new String[] { "Man", "Woman", "Men", "Women", "M", "W" }) {
+                        Pattern p = Pattern.compile("(( - )|-| )" + genderIndicator + "$");
+                        Matcher m = p.matcher(boatClass.trim());
+                        if (m.find()) {
+                            boatClass = boatClass.trim().substring(0, m.start(1));
+                            break;
+                        }
                     }
+                    regatta = getService().createRegatta(
+                            replayRaceDTO.rsc,
+                            boatClass.trim(),
+                            RegattaImpl.getDefaultName(replayRaceDTO.rsc, replayRaceDTO.boat_class),
+                            Collections.singletonList(new SeriesImpl(LeaderboardNameConstants.DEFAULT_SERIES_NAME,
+                            /* isMedal */false, Collections.singletonList(new FleetImpl(
+                                    LeaderboardNameConstants.DEFAULT_FLEET_NAME)),
+                            /* race column names */new ArrayList<String>(), getService())), false,
+                            baseDomainFactory.createScoringScheme(ScoringSchemeType.LOW_POINT), null);
+                    // TODO: is course area relevant for swiss timing replay?
+                } else {
+                    regatta = getService().getRegatta(regattaIdentifier);
                 }
-                regatta = getService().createRegatta(
-                        replayRaceDTO.rsc,
-                        boatClass.trim(),
-                        RegattaImpl.getDefaultName(replayRaceDTO.rsc, replayRaceDTO.boat_class),
-                        Collections.singletonList(new SeriesImpl(
-                                LeaderboardNameConstants.DEFAULT_SERIES_NAME, 
-                                /* isMedal */false, 
-                                Collections.singletonList(new FleetImpl(LeaderboardNameConstants.DEFAULT_FLEET_NAME)), 
-                                /* race column names */ new ArrayList<String>(), getService())), 
-                                false,
-                                baseDomainFactory.createScoringScheme(ScoringSchemeType.LOW_POINT), null);
-                //TODO: is course area relevant for swiss timing replay?
-            } else {
-                regatta = getService().getRegatta(regattaIdentifier);
+                getSwissTimingReplayService().loadRaceData(replayRaceDTO.link, regatta, getService());
+            } catch (Exception e) {
+                logger.log(Level.SEVERE, "Error trying to load SwissTimingReplay race " + replayRaceDTO, e);
             }
-            getSwissTimingReplayService().loadRaceData(replayRaceDTO.link, regatta, getService());
         }
     }
 
@@ -2237,51 +2269,74 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         course.lockForRead(); // make sure the tracked leg survives this call even if a course update is pending
         try {
             TrackedLegOfCompetitor trackedLeg = trackedRace.getTrackedLeg(competitor, timePoint);
-            if (trackedLeg != null) {
-                switch (dataType) {
-                case CURRENT_SPEED_OVER_GROUND_IN_KNOTS:
-                    SpeedWithBearing speedOverGround = trackedLeg.getSpeedOverGround(timePoint);
+            switch (dataType) {
+            case CURRENT_SPEED_OVER_GROUND_IN_KNOTS:
+                final GPSFixTrack<Competitor, GPSFixMoving> track = trackedRace.getTrack(competitor);
+                if (track != null) {
+                    SpeedWithBearing speedOverGround = track.getEstimatedSpeed(timePoint);
                     result = (speedOverGround == null) ? null : speedOverGround.getKnots();
-                    break;
-                case VELOCITY_MADE_GOOD_IN_KNOTS:
+                }
+                break;
+            case VELOCITY_MADE_GOOD_IN_KNOTS:
+                if (trackedLeg != null) {
                     Speed velocityMadeGood = trackedLeg.getVelocityMadeGood(timePoint);
                     result = (velocityMadeGood == null) ? null : velocityMadeGood.getKnots();
-                    break;
-                case DISTANCE_TRAVELED:
+                }
+                break;
+            case DISTANCE_TRAVELED:
+                if (trackedLeg != null) {
                     Distance distanceTraveled = trackedRace.getDistanceTraveled(competitor, timePoint);
                     result = distanceTraveled == null ? null : distanceTraveled.getMeters();
-                    break;
-                case GAP_TO_LEADER_IN_SECONDS:
+                }
+                break;
+            case GAP_TO_LEADER_IN_SECONDS:
+                if (trackedLeg != null) {
                     result = trackedLeg.getGapToLeaderInSeconds(timePoint);
-                    break;
-                case WINDWARD_DISTANCE_TO_OVERALL_LEADER:
+                }
+                break;
+            case WINDWARD_DISTANCE_TO_OVERALL_LEADER:
+                if (trackedLeg != null) {
                     Distance distanceToLeader = trackedLeg.getWindwardDistanceToOverallLeader(timePoint);
                     result = (distanceToLeader == null) ? null : distanceToLeader.getMeters();
-                    break;
-                case RACE_RANK:
-                    result = (double) trackedLeg.getRank(timePoint);
-                    break;
-                case REGATTA_RANK:
-                    if (leaderboardName == null || leaderboardName.isEmpty()) {
-                        break;
-                    }
-
-                    Leaderboard leaderboard = getService().getLeaderboardByName(leaderboardName);
-                    result = leaderboard == null ? null : (double) leaderboard.getTotalRankOfCompetitor(competitor, timePoint);
-                    break;
-                case OVERALL_RANK:
-                    if (leaderboardGroupName == null || leaderboardGroupName.isEmpty()) {
-                        break;
-                    }
-
-                    LeaderboardGroup group = getService().getLeaderboardGroupByName(leaderboardGroupName);
-                    Leaderboard overall = group.getOverallLeaderboard();
-                    result = overall == null ? null : (double) overall.getTotalRankOfCompetitor(competitor, timePoint);
-                    break;
-                default:
-                    throw new UnsupportedOperationException("Theres currently no support for the enum value '"
-                            + dataType + "' in this method.");
                 }
+                break;
+            case RACE_RANK:
+                if (trackedLeg != null) {
+                    result = (double) trackedLeg.getRank(timePoint);
+                }
+                break;
+            case REGATTA_RANK:
+                if (leaderboardName == null || leaderboardName.isEmpty()) {
+                    break;
+                }
+                Leaderboard leaderboard = getService().getLeaderboardByName(leaderboardName);
+                result = leaderboard == null ? null : (double) leaderboard.getTotalRankOfCompetitor(competitor,
+                        timePoint);
+                break;
+            case OVERALL_RANK:
+                if (leaderboardGroupName == null || leaderboardGroupName.isEmpty()) {
+                    break;
+                }
+                LeaderboardGroup group = getService().getLeaderboardGroupByName(leaderboardGroupName);
+                Leaderboard overall = group.getOverallLeaderboard();
+                result = overall == null ? null : (double) overall.getTotalRankOfCompetitor(competitor, timePoint);
+                break;
+            case DISTANCE_TO_START_LINE:
+                TimePoint startOfRace = trackedRace.getStartOfRace();
+                if (startOfRace == null || timePoint.before(startOfRace) || timePoint.equals(startOfRace)) {
+                    Distance distanceToStartLine = trackedRace.getDistanceToStartLine(competitor, timePoint);
+                    result = distanceToStartLine == null ? null : distanceToStartLine.getMeters();
+                }
+                break;
+            case BEAT_ANGLE:
+                if (trackedLeg != null) {
+                    Bearing beatAngle = trackedLeg.getBeatAngle(timePoint);
+                    result = beatAngle == null ? null : Math.abs(beatAngle.getDegrees());
+                }
+                break;
+            default:
+                throw new UnsupportedOperationException("Theres currently no support for the enum value '" + dataType
+                        + "' in this method.");
             }
             return result;
         } finally {
@@ -2557,10 +2612,10 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
     }
 
     @Override
-    public TrackedRace getTrackedRace(RegattaAndRaceIdentifier regattaNameAndRaceName) {
+    public DynamicTrackedRace getTrackedRace(RegattaAndRaceIdentifier regattaNameAndRaceName) {
         Regatta regatta = getService().getRegattaByName(regattaNameAndRaceName.getRegattaName());
         RaceDefinition race = getRaceByName(regatta, regattaNameAndRaceName.getRaceName());
-        TrackedRace trackedRace = getService().getOrCreateTrackedRegatta(regatta).getTrackedRace(race);
+        DynamicTrackedRace trackedRace = getService().getOrCreateTrackedRegatta(regatta).getTrackedRace(race);
         return trackedRace;
     }
 
@@ -2765,8 +2820,7 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         return getEventById(eventUuid);
     }
 
-    @Override
-    public EventDTO getEventById(Serializable id) {
+    private EventDTO getEventById(UUID id) {
         EventDTO result = null;
         Event event = getService().getEvent(id);
         if (event != null) {
@@ -2798,7 +2852,7 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
 
     private CourseAreaDTO convertToCourseAreaDTO(CourseArea courseArea) {
         CourseAreaDTO courseAreaDTO = new CourseAreaDTO(courseArea.getName());
-        courseAreaDTO.id = courseArea.getId().toString();
+        courseAreaDTO.uuidAsString = courseArea.getId().toString();
         return courseAreaDTO;
     }
     
@@ -2884,9 +2938,10 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
     }
 
     @Override
-    public void updateRegatta(RegattaIdentifier regattaName, String defaultCourseAreaId) {
-        UUID courseAreaUuid = convertIdentifierStringToUuid(defaultCourseAreaId);
-        getService().apply(new UpdateSpecificRegatta(regattaName, courseAreaUuid));
+    public void updateRegatta(RegattaIdentifier regattaName, String defaultCourseAreaUuidAsString, 
+            RegattaConfigurationDTO configurationDTO) {
+        UUID courseAreaUuid = convertIdentifierStringToUuid(defaultCourseAreaUuidAsString);
+        getService().apply(new UpdateSpecificRegatta(regattaName, courseAreaUuid, convertToRegattaConfiguration(configurationDTO)));
     }
 
     @Override
@@ -3273,7 +3328,7 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
     public MasterDataImportObjectCreationCount importMasterData(String urlAsString, String[] groupNames, boolean override, boolean compress) {
         long startTime = System.currentTimeMillis();
         String hostname;
-        Integer port = -1;
+        Integer port = 80;
         try {
             URL url = new URL(urlAsString);
             hostname = url.getHost();
@@ -3292,7 +3347,12 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
                 port = Integer.parseInt(split[1]);
             }
         }
-        String query = createLeaderboardQuery(groupNames);
+        String query;
+        try {
+            query = createLeaderboardQuery(groupNames, compress);
+        } catch (UnsupportedEncodingException e1) {
+            throw new RuntimeException(e1);
+        }
         HttpURLConnection connection = null;
 
         URL serverAddress = null;
@@ -3312,9 +3372,9 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
             BufferedReader rd;
             if (compress) {
                 gzip = new GZIPInputStream(connection.getInputStream());
-                rd  = new BufferedReader(new InputStreamReader(gzip));
+                rd = new BufferedReader(new InputStreamReader(gzip, Charset.forName("UTF-8")));
             } else {
-                rd  = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                rd = new BufferedReader(new InputStreamReader(connection.getInputStream(), Charset.forName("UTF-8")));
             }
             StringBuilder sb = new StringBuilder();
             String line;
@@ -3340,7 +3400,7 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
     }
     
     private URL createUrl(String host, Integer port, String query) throws Exception {
-        return new URI("http", null, host, port, "/sailingserver/api/v1/masterdata/leaderboardgroups", query, null).toURL();
+        return new URL("http://" + host + ":" + port + "/sailingserver/api/v1/masterdata/leaderboardgroups?" + query);
     }
     
     protected MasterDataImportObjectCreationCount importFromHttpResponse(String string, boolean override) {
@@ -3348,12 +3408,17 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         return importer.importMasterData(string, override);
     }
 
-    private String createLeaderboardQuery(String[] groupNames) {
+    private String createLeaderboardQuery(String[] groupNames, boolean compress) throws UnsupportedEncodingException {
         StringBuffer queryStringBuffer = new StringBuffer("");
         for (int i = 0; i < groupNames.length; i++) {
-            queryStringBuffer.append("names[]=" + groupNames[i] + "&");
+            String encodedGroupName = URLEncoder.encode(groupNames[i], "UTF-8");
+            queryStringBuffer.append("names[]=" + encodedGroupName + "&");
         }
-        queryStringBuffer.append("compress=true");
+        if (compress) {
+            queryStringBuffer.append("compress=true");
+        } else {
+            queryStringBuffer.deleteCharAt(queryStringBuffer.length() - 1);
+        }
         return queryStringBuffer.toString();
     }
 
@@ -3361,12 +3426,18 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
     public Iterable<CompetitorDTO> getCompetitors() {
         return convertToCompetitorDTOs(getService().getBaseDomainFactory().getCompetitorStore().getCompetitors());
     }
-    
+
+    @Override
+    public Iterable<CompetitorDTO> getCompetitorsOfLeaderboard(String leaderboardName) {
+        Leaderboard leaderboard = getService().getLeaderboardByName(leaderboardName);
+        return convertToCompetitorDTOs(leaderboard.getAllCompetitors());
+    }
+
     @Override
     public CompetitorDTO updateCompetitor(CompetitorDTO competitor) {
         return getBaseDomainFactory().convertToCompetitorDTO(
                 getService().apply(new UpdateCompetitor(competitor.getIdAsString(), competitor.getName(),
-                competitor.getSailID(),
+                competitor.getColor(), competitor.getSailID(),
                 (competitor.getThreeLetterIocCountryCode() == null || competitor.getThreeLetterIocCountryCode().isEmpty()) ? null :
                     getBaseDomainFactory().getOrCreateNationality(competitor.getThreeLetterIocCountryCode()))));
     }
@@ -3392,4 +3463,244 @@ public class SailingServiceImpl extends ProxiedRemoteServiceServlet implements S
         return null;
     }
     
+    @Override
+    public List<DeviceConfigurationMatcherDTO> getDeviceConfigurationMatchers() {
+        List<DeviceConfigurationMatcherDTO> configs = new ArrayList<DeviceConfigurationMatcherDTO>();
+        for (Entry<DeviceConfigurationMatcher, DeviceConfiguration> entry : 
+            getService().getAllDeviceConfigurations().entrySet()) {
+            DeviceConfigurationMatcher matcher = entry.getKey();
+            configs.add(convertToDeviceConfigurationMatcherDTO(matcher));
+        }
+        return configs;
+    }
+
+    @Override
+    public DeviceConfigurationDTO getDeviceConfiguration(DeviceConfigurationMatcherDTO matcherDto) {
+        DeviceConfigurationMatcher matcher = convertToDeviceConfigurationMatcher(matcherDto.type, matcherDto.clients);
+        DeviceConfiguration configuration = getService().getAllDeviceConfigurations().get(matcher);
+        if (configuration == null) {
+            return null;
+        } else {
+            return convertToDeviceConfigurationDTO(configuration);
+        }
+    }
+
+    @Override
+    public DeviceConfigurationMatcherDTO createOrUpdateDeviceConfiguration(DeviceConfigurationMatcherDTO matcherDTO, DeviceConfigurationDTO configurationDTO) {
+        DeviceConfigurationMatcher matcher = convertToDeviceConfigurationMatcher(matcherDTO.type, matcherDTO.clients);
+        DeviceConfiguration configuration = convertToDeviceConfiguration(configurationDTO);
+        getService().createOrUpdateDeviceConfiguration(matcher, configuration);
+        return convertToDeviceConfigurationMatcherDTO(matcher);
+    }
+
+    @Override
+    public boolean removeDeviceConfiguration(DeviceConfigurationMatcherType type, List<String> clientIds) {
+        DeviceConfigurationMatcher matcher = convertToDeviceConfigurationMatcher(type, clientIds);
+        getService().removeDeviceConfiguration(matcher);
+        return true;
+    }
+
+    private DeviceConfigurationMatcherDTO convertToDeviceConfigurationMatcherDTO(DeviceConfigurationMatcher matcher) {
+        List<String> clients = new ArrayList<String>();
+        
+        if (matcher instanceof DeviceConfigurationMatcherSingle) {
+            clients.add(((DeviceConfigurationMatcherSingle)matcher).getClientIdentifier());
+        } else if (matcher instanceof DeviceConfigurationMatcherMulti) {
+            Util.addAll(((DeviceConfigurationMatcherMulti)matcher).getClientIdentifiers(), clients);
+        }
+        
+        DeviceConfigurationMatcherDTO dto = new DeviceConfigurationMatcherDTO(
+                matcher.getMatcherType(),
+                clients,  
+                matcher.getMatchingRank());
+        return dto;
+    }
+
+    private DeviceConfigurationMatcher convertToDeviceConfigurationMatcher(DeviceConfigurationMatcherType type, List<String> clientIds) {
+        return baseDomainFactory.getOrCreateDeviceConfigurationMatcher(type, clientIds);
+    }
+
+    private DeviceConfigurationDTO convertToDeviceConfigurationDTO(DeviceConfiguration configuration) {
+        DeviceConfigurationDTO dto = new DeviceConfigurationDTO();
+        dto.allowedCourseAreaNames = configuration.getAllowedCourseAreaNames();
+        dto.resultsMailRecipient = configuration.getResultsMailRecipient();
+        dto.byNameDesignerCourseNames = configuration.getByNameCourseDesignerCourseNames();
+        if (configuration.getRegattaConfiguration() != null) {
+            dto.regattaConfiguration = convertToRegattaConfigurationDTO(configuration.getRegattaConfiguration());
+        }
+        return dto;
+    }
+
+    private DeviceConfigurationDTO.RegattaConfigurationDTO convertToRegattaConfigurationDTO(
+            RegattaConfiguration configuration) {
+        if (configuration == null) {
+            return null;
+        }
+        DeviceConfigurationDTO.RegattaConfigurationDTO dto = new DeviceConfigurationDTO.RegattaConfigurationDTO();
+        
+        dto.defaultRacingProcedureType = configuration.getDefaultRacingProcedureType();
+        dto.defaultCourseDesignerMode = configuration.getDefaultCourseDesignerMode();
+        
+        if (configuration.getRRS26Configuration() != null) {
+            dto.rrs26Configuration = new DeviceConfigurationDTO.RegattaConfigurationDTO.RRS26ConfigurationDTO();
+            dto.rrs26Configuration.classFlag = configuration.getRRS26Configuration().getClassFlag();
+            dto.rrs26Configuration.hasInidividualRecall = configuration.getRRS26Configuration().hasInidividualRecall();
+            dto.rrs26Configuration.startModeFlags = configuration.getRRS26Configuration().getStartModeFlags();
+        }
+        if (configuration.getGateStartConfiguration() != null) {
+            dto.gateStartConfiguration = new DeviceConfigurationDTO.RegattaConfigurationDTO.GateStartConfigurationDTO();
+            dto.gateStartConfiguration.classFlag = configuration.getGateStartConfiguration().getClassFlag();
+            dto.gateStartConfiguration.hasInidividualRecall = configuration.getGateStartConfiguration().hasInidividualRecall();
+            dto.gateStartConfiguration.hasPathfinder = configuration.getGateStartConfiguration().hasPathfinder();
+            dto.gateStartConfiguration.hasAdditionalGolfDownTime = configuration.getGateStartConfiguration().hasAdditionalGolfDownTime();
+        }
+        if (configuration.getESSConfiguration() != null) {
+            dto.essConfiguration = new DeviceConfigurationDTO.RegattaConfigurationDTO.ESSConfigurationDTO();
+            dto.essConfiguration.classFlag = configuration.getESSConfiguration().getClassFlag();
+            dto.essConfiguration.hasInidividualRecall = configuration.getESSConfiguration().hasInidividualRecall();
+        }
+        if (configuration.getBasicConfiguration() != null) {
+            dto.basicConfiguration = new DeviceConfigurationDTO.RegattaConfigurationDTO.RacingProcedureConfigurationDTO();
+            dto.basicConfiguration.classFlag = configuration.getBasicConfiguration().getClassFlag();
+            dto.basicConfiguration.hasInidividualRecall = configuration.getBasicConfiguration().hasInidividualRecall();
+        }
+        return dto;
+    }
+
+    private DeviceConfigurationImpl convertToDeviceConfiguration(DeviceConfigurationDTO dto) {
+        DeviceConfigurationImpl configuration = new DeviceConfigurationImpl(convertToRegattaConfiguration(dto.regattaConfiguration));
+        configuration.setAllowedCourseAreaNames(dto.allowedCourseAreaNames);
+        configuration.setResultsMailRecipient(dto.resultsMailRecipient);
+        configuration.setByNameDesignerCourseNames(dto.byNameDesignerCourseNames);
+        return configuration;
+    }
+
+    private RegattaConfiguration convertToRegattaConfiguration(RegattaConfigurationDTO dto) {
+        if (dto == null) {
+            return null;
+        }
+        RegattaConfigurationImpl configuration = new RegattaConfigurationImpl();
+        configuration.setDefaultRacingProcedureType(dto.defaultRacingProcedureType);
+        configuration.setDefaultCourseDesignerMode(dto.defaultCourseDesignerMode);
+        if (dto.rrs26Configuration != null) {
+            RRS26ConfigurationImpl config = new RRS26ConfigurationImpl();
+            config.setClassFlag(dto.rrs26Configuration.classFlag);
+            config.setHasInidividualRecall(dto.rrs26Configuration.hasInidividualRecall);
+            config.setStartModeFlags(dto.rrs26Configuration.startModeFlags);
+            configuration.setRRS26Configuration(config);
+        }
+        if (dto.gateStartConfiguration != null) {
+            GateStartConfigurationImpl config = new GateStartConfigurationImpl();
+            config.setClassFlag(dto.gateStartConfiguration.classFlag);
+            config.setHasInidividualRecall(dto.gateStartConfiguration.hasInidividualRecall);
+            config.setHasPathfinder(dto.gateStartConfiguration.hasPathfinder);
+            config.setHasAdditionalGolfDownTime(dto.gateStartConfiguration.hasAdditionalGolfDownTime);
+            configuration.setGateStartConfiguration(config);
+        }
+        if (dto.essConfiguration != null) {
+            ESSConfigurationImpl config = new ESSConfigurationImpl();
+            config.setClassFlag(dto.essConfiguration.classFlag);
+            config.setHasInidividualRecall(dto.essConfiguration.hasInidividualRecall);
+            configuration.setESSConfiguration(config);
+        }
+        if (dto.basicConfiguration != null) {
+            RacingProcedureConfigurationImpl config = new RacingProcedureConfigurationImpl();
+            config.setClassFlag(dto.basicConfiguration.classFlag);
+            config.setHasInidividualRecall(dto.basicConfiguration.hasInidividualRecall);
+            configuration.setBasicConfiguration(config);
+        }
+        return configuration;
+    }
+
+    @Override
+    public boolean setStartTime(RaceLogSetStartTimeDTO dto) {
+        TimePoint newStartTime = getService().setStartTime(dto.leaderboardName, dto.raceColumnName, 
+                dto.fleetName, dto.authorName, dto.authorPriority,
+                dto.passId, new MillisecondsTimePoint(dto.logicalTimePoint), new MillisecondsTimePoint(dto.startTime));
+        return new MillisecondsTimePoint(dto.startTime).equals(newStartTime);
+    }
+
+    @Override
+    public Pair<Date, Integer> getStartTime(String leaderboardName, String raceColumnName, String fleetName) {
+        Pair<TimePoint, Integer> result = getService().getStartTime(leaderboardName, raceColumnName, fleetName);
+        if (result == null) {
+            return null;
+        }
+        return new Pair<Date, Integer>(result.getA().asDate(), result.getB());
+    }
+
+    @Override
+    public Iterable<String> getAllIgtimiAccountEmailAddresses() {
+        List<String> result = new ArrayList<String>();
+        for (Account account : getIgtimiConnectionFactory().getAllAccounts()) {
+            result.add(account.getUser().getEmail());
+        }
+        return result;
+    }
+
+    private IgtimiConnectionFactory getIgtimiConnectionFactory() {
+        return igtimiAdapterTracker.getService();
+    }
+
+    @Override
+    public String getIgtimiAuthorizationUrl() {
+        return getIgtimiConnectionFactory().getAuthorizationUrl();
+    }
+
+    @Override
+    public boolean authorizeAccessToIgtimiUser(String eMailAddress, String password) throws Exception {
+        Account account = getIgtimiConnectionFactory().createAccountToAccessUserData(eMailAddress, password);
+        return account != null;
+    }
+
+    @Override
+    public void removeIgtimiAccount(String eMailOfAccountToRemove) {
+        getIgtimiConnectionFactory().removeAccount(eMailOfAccountToRemove);
+    }
+
+    @Override
+    public Map<RegattaAndRaceIdentifier, Integer> importWindFromIgtimi(List<RaceDTO> selectedRaces) throws IllegalStateException,
+            ClientProtocolException, IOException, org.json.simple.parser.ParseException {
+        final IgtimiConnectionFactory igtimiConnectionFactory = getIgtimiConnectionFactory();
+        final Iterable<DynamicTrackedRace> trackedRaces;
+        if (selectedRaces != null && !selectedRaces.isEmpty()) {
+            List<DynamicTrackedRace> myTrackedRaces = new ArrayList<DynamicTrackedRace>();
+            trackedRaces = myTrackedRaces;
+            for (RaceDTO raceDTO : selectedRaces) {
+                DynamicTrackedRace trackedRace = getTrackedRace(raceDTO.getRaceIdentifier());
+                myTrackedRaces.add(trackedRace);
+            }
+        } else {
+            trackedRaces = getAllTrackedRaces();
+        }
+        Map<RegattaAndRaceIdentifier, Integer> numberOfWindFixesImportedPerRace = new HashMap<RegattaAndRaceIdentifier, Integer>();
+        for (Account account : igtimiConnectionFactory.getAllAccounts()) {
+            IgtimiConnection conn = igtimiConnectionFactory.connect(account);
+            Map<TrackedRace, Integer> resultsForAccounts = conn.importWindIntoRace(trackedRaces);
+            for (Entry<TrackedRace, Integer> resultForAccount : resultsForAccounts.entrySet()) {
+                RegattaAndRaceIdentifier key = resultForAccount.getKey().getRaceIdentifier();
+                Integer i = numberOfWindFixesImportedPerRace.get(key);
+                if (i == null) {
+                    i = 0;
+                }
+                numberOfWindFixesImportedPerRace.put(key, i+resultForAccount.getValue());
+            }
+        }
+        return numberOfWindFixesImportedPerRace;
+    }
+
+    private Set<DynamicTrackedRace> getAllTrackedRaces() {
+        Set<DynamicTrackedRace> result = new HashSet<DynamicTrackedRace>();
+        Iterable<Regatta> allRegattas = getService().getAllRegattas();
+        for (Regatta regatta : allRegattas) {
+            DynamicTrackedRegatta trackedRegatta = getService().getTrackedRegatta(regatta);
+            if (trackedRegatta != null) {
+                Iterable<TrackedRace> trackedRaces = trackedRegatta.getTrackedRaces();
+                for (TrackedRace trackedRace : trackedRaces) {
+                    result.add((DynamicTrackedRace) trackedRace);
+                }
+            }
+        }
+        return result;
+    }
 }
